# vps-inspec

./: .gitignore  Cargo.toml  README.md  README.md   install.sh  start.sh
src/: main.rs
src/ai/: mod.rs  nvidia_client.rs
src/collector/: hardware.rs  logs.rs  mod.rs  network.rs  performance.rs  security.rs  software.rs  storage.rs  system.rs
src/preflight/: mod.rs
src/report/: docx.rs  mod.rs  pdf.rs
src/translator/: mod.rs
src/utils/: mod.rs
