[package]
name = "vps-inspec"
version = "1.0.0"
edition = "2021"
authors = ["akaanakbaik"]
repository = "https://github.com/akaanakbaik/vps-inspec"
description = "Professional VPS Inspector with AI-powered diagnostics - The Most Comprehensive VPS Diagnostic Tool"
license = "MIT"
keywords = ["vps", "diagnostic", "monitoring", "security", "ai"]
categories = ["command-line-utilities", "system-tools"]

[lib]
name = "vps_inspec"
path = "src/lib.rs"

[[bin]]
name = "vps-inspec"
path = "src/main.rs"

[[bin]]
name = "vps-inspec-update"
path = "src/bin/update.rs"

[dependencies]
clap = { version = "4.4", features = ["derive", "cargo"] }
dialoguer = "0.11"
indicatif = "0.17"
colored = "2.0"
sysinfo = "0.30"
whoami = "1.4"
uptime_lib = "0.2"
num_cpus = "1.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
async-trait = "0.1"
docx-rs = "0.5"
printpdf = "0.6"
image = "0.24"
plotters = "0.3"
anyhow = "1.0"
thiserror = "1.0"
openai-api = "0.6"
backoff = { version = "0.4", features = ["tokio"] }
walkdir = "2.4"
hostname = "0.3"
mac_address = "1.1"
systemstat = "0.2"
nix = "0.27"
lazy_static = "1.4"
reqwest-eventsource = "0.5"
futures-util = "0.3"
pin-project-lite = "0.2"
bytes = "1.5"
http-body-util = "0.1"
hyper = { version = "0.14", features = ["full"] }
hyper-rustls = "0.24"
rustls = "0.21"
rustls-pemfile = "2.0"
tokio-rustls = "0.24"
webpki-roots = "0.25"
uuid = { version = "1.6", features = ["v4", "serde"] }
base64 = "0.21"
md-5 = "0.10"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
tempfile = "3.9"
zip = "0.6"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]